# CppDeepLearning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: fnn.cpp  kmean_clustering.cpp  mnist.cpp  xornn.cpp  xornn.py  xornn_take_2.cpp
exportToHTML/: debug.h.html  sequential.h.html
src/include/: matrix.h
src/include/clustering/: kmean.h  meanshift.h
src/include/fnn/: layer.h  network.h  sequential.h
src/include/maths/: activations.h  losses.h  matrix.h  numerical_analysis.h  stats.h  utils.h
src/include/maths/obsolete/: numerical_analysis.h  tensor.h
src/include/svm/: svm.h
src/linalg/: matrix.cpp
